FIX: sales menu is too tall

--- a/public/backend.css
+++ b/public/backend.css
@@ -1140,8 +1140,8 @@ aside:hover:before {
   position: absolute;
   right: 0;
   top: 0;
-  padding: 1em 0.5em 1em 0;
+  padding: 0.5em 0.5em 0.5em 0;
   border: 2px solid rgba(0, 0, 0, 0.9);
   background: rgba(250, 250, 250, 0.95);
-  max-width: 18em;
+  max-width: 30em;
   max-height: 1000%; }
